[tool.poetry]
name = "llm-chat-env"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "llm_chat_env"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.24.1"
langchain = "^0.0.229"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
google-search-results = "^2.4.2"
matplotlib = "^3.7.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
